--- a/Iwacu/src/app/home/home.component.scss
+++ b/Iwacu/src/app/home/home.component.scss
@@ -2,3 +2,17 @@ main {
   width: 80%;
   margin: 1rem auto;
 }
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
