--- a/Iwacu/src/app/post-create/post-create.component.scss
+++ b/Iwacu/src/app/post-create/post-create.component.scss
@@ -5,5 +5,22 @@ mat-card{
 
 mat-form-field,
 textarea{
-  width:100%
+  width:100%;
+}
+
+mat-spinner{
+  margin: auto;
+}
+
+input[type="file"]{
+  visibility: hidden;
+}
+
+.image-preview{
+  height: 5rem;
+  margin: 1rem 0;
+}
+
+.image-preview img {
+  height: 100%;
 }
