UI tweaks on the grid card, and added some more images

--- a/Iwacu/src/app/home/home.component.html
+++ b/Iwacu/src/app/home/home.component.html
@@ -1,13 +1,4 @@
-<mat-toolbar color="primary">
-  <span routerLink="">Iwacu</span>
-  <span class="spacer"></span>
-  <ul>
-    <li>
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create new Post</a>
-    </li>
-  </ul>
-
-</mat-toolbar>
+<app-header></app-header>
 <main>
   <router-outlet></router-outlet>
 </main>
