--- a/Iwacu/src/app/header/header.component.html
+++ b/Iwacu/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <span class="spacer"></span>
   <ul>
     <li>
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create new Post</a>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create new Listing</a>
     </li>
   </ul>
 
