--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<!-- <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{ post.title }}
@@ -12,5 +12,36 @@
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
-</mat-accordion>
-<p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+</mat-accordion> -->
+
+
+<!-- <mat-card multi="true" *ngIf="posts.length > 0">
+
+</mat-card> -->
+
+<div class="listings">
+  <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="posts.length > 0">
+    <div fxFlex="25%" *ngFor="let post of posts">
+      <mat-card class="mat-elevation-z4" >
+        <mat-card-header>
+          <mat-card-title>{{ post.title}}</mat-card-title>
+        </mat-card-header>
+        <div class="post-image">
+          <img [src]="post.imagePath" [alt]="post.title">
+        </div>
+        <mat-card-content>
+          <p>
+            {{ post.title }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <mat-action-row>
+            <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+          </mat-action-row>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+  </div>
+  <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
