--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -21,7 +21,7 @@
 
 <div class="listings">
   <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="posts.length > 0">
-    <div fxFlex="25%" *ngFor="let post of posts">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let post of posts">
       <mat-card class="mat-elevation-z4" >
         <mat-card-header>
           <mat-card-title>{{ post.title}}</mat-card-title>
