ui changes and first auth steps

--- a/Iwacu/src/app/posts/post-list/post-list.component.scss
+++ b/Iwacu/src/app/posts/post-list/post-list.component.scss
@@ -3,24 +3,23 @@
   margin-top: 1rem;
 }
 
+mat-spinner {
+  margin: auto;
+}
+
+mat-paginator {
+  margin-top: 1rem;
+}
+
 .info-text {
   text-align: center;
 }
 
 .post-image {
   width: 100%;
-  margin: 1rem 0;
 }
 
 .post-image img {
-  width: 50%;
-  box-shadow: 1px 1px rgba(0, 0, 0, 5);
-}
-
-listings {
-  padding: 16px;
-}
-
-.listings > mat-card {
-  width: 200px;
+  width: 100%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
