--- a/Iwacu/src/app/header/header.component.scss
+++ b/Iwacu/src/app/header/header.component.scss
@@ -1,18 +1,18 @@
-main {
-  width: 80%;
-  margin: 1rem auto;
-}
-a {
-  text-decoration: none;
-  color: white;
-}
-
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.spacer{
-  flex: 2 2 auto;
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  display: flex;
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
