added authorization on post edits

--- a/Iwacu/src/app/header/header.component.html
+++ b/Iwacu/src/app/header/header.component.html
@@ -13,6 +13,6 @@
     <li *ngIf="!userIsAuthenticated">
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
-    <button mat-button *ngIf="userIsAuthenticated" (click)="onLogout">Log Out</button>
+    <button mat-button *ngIf="userIsAuthenticated" (click)="onLogout()">Log Out</button>
   </ul>
 </mat-toolbar>
