--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -15,7 +15,7 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <mat-action-row>
+          <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator">
             <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
             <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
           </mat-action-row>
