added search functionalities v0

--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-
+<app-search></app-search>
 <div class="listings">
   <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="posts.length > 0">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let post of posts">
