--- a/Iwacu/src/app/posts/search/search.component.html
+++ b/Iwacu/src/app/posts/search/search.component.html
@@ -1,4 +1,4 @@
 <div>
-  <input type="text" placeholder="search for a item!" [(ngModel)]="searchTerm" (change)="search()">
+  <input type="text" placeholder="search for a item" [(ngModel)]="searchTerm" (change)="search()">
   <button (click)="search()">Search</button>
 </div>
