--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -5,6 +5,7 @@
       <mat-card class="mat-elevation-z4" >
         <mat-card-header>
           <mat-card-title>{{ post.title}}</mat-card-title>
+          <mat-card-subtitle>{{ post.category }}</mat-card-subtitle>
         </mat-card-header>
         <div class="post-image">
           <img [src]="post.imagePath" [alt]="post.title">
