--- a/Iwacu/src/app/profile/profile.component.html
+++ b/Iwacu/src/app/profile/profile.component.html
@@ -1,2 +1,41 @@
-<div>this is a user name </div>
-<div> this is the user profile </div>
+<div class="profile-card">
+  <mat-card class="card">
+    <mat-card-header>
+      <div mat-card-avatar>
+
+      </div>
+      <mat-card-title> {{ userEmail}} </mat-card-title>
+      <mat-card-subtitle> this is a user's email</mat-card-subtitle>
+    </mat-card-header>
+  </mat-card>
+</div>
+<div class="my-posts">My Posts</div>
+<div class="listings">
+  <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="posts.length > 0">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let post of posts">
+      <mat-card class="mat-elevation-z4" >
+        <mat-card-header>
+          <mat-card-title>{{ post.title}}</mat-card-title>
+          <mat-card-subtitle>{{ post.category }}</mat-card-subtitle>
+        </mat-card-header>
+        <div class="post-image">
+          <img [src]="post.imagePath" [alt]="post.title">
+        </div>
+        <mat-card-content>
+          <p>
+            {{ post.title }}
+          </p>
+        </mat-card-content>
+        <!-- <mat-card-actions>
+          <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator">
+            <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+          </mat-action-row>
+        </mat-card-actions> -->
+      </mat-card>
+    </div>
+  </div>
+  </div>
+  <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
+  <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+
