--- a/Iwacu/src/app/posts/post-create/post-create.component.html
+++ b/Iwacu/src/app/posts/post-create/post-create.component.html
@@ -38,6 +38,6 @@
     <button
       mat-raised-button
       color="accent"
-      type="submit">Save Post</button>
+      type="submit">Post Item</button>
   </form>
 </mat-card>
