--- a/Iwacu/src/app/my-cart/my-cart.component.html
+++ b/Iwacu/src/app/my-cart/my-cart.component.html
@@ -1,21 +1,20 @@
-<app-search></app-search>
 <div class="listings">
-  <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="posts.length > 0">
-    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let post of posts">
+  <div fxLayout="row wrap"  fxLayoutGap="16px grid" *ngIf="my_items.length > 0">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let item of my_items">
       <mat-card class="mat-elevation-z4" >
         <mat-card-header>
-          <mat-card-title>{{ post.title}}</mat-card-title>
-          <mat-card-subtitle>{{ post.category }}</mat-card-subtitle>
+          <mat-card-title>{{ item.title}}</mat-card-title>
+          <mat-card-subtitle>{{ item.category }}</mat-card-subtitle>
         </mat-card-header>
         <div class="post-image">
-          <img [src]="post.imagePath" [alt]="post.title">
+          <img [src]="item.imagePath" [alt]="item.title">
         </div>
         <mat-card-content>
           <p>
-            {{ post.title }}
+            {{ item.title }}
           </p>
         </mat-card-content>
-        <mat-card-actions>
+        <!-- <mat-card-actions>
           <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator && isSeller">
             <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
             <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
@@ -23,11 +22,11 @@
           <mat-action-row *ngIf="userIsAuthenticated && !isSeller">
             <a mat-button color="primary">Add to Cart</a>
             <button mat-button color="accent">See More</button>
-          </mat-action-row>
-        </mat-card-actions>
+          </mat-action-row> -->
+        <!-- </mat-card-actions> -->
       </mat-card>
     </div>
   </div>
   </div>
-  <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
-  <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+  <!-- <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"></mat-paginator>
+  <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p> -->
