--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -22,7 +22,7 @@
           </mat-action-row>
           <mat-action-row *ngIf="userIsAuthenticated && !isSeller">
             <a mat-button color="primary">Add to Cart</a>
-            <button mat-button color="accent" [routerLink]="['/post-detail']">See More</button>
+            <button mat-button color="accent" [routerLink]="['/post-detail', post.id]">See More</button>
           </mat-action-row>
         </mat-card-actions>
       </mat-card>
