--- a/Iwacu/src/app/posts/post-details/post-details.component.html
+++ b/Iwacu/src/app/posts/post-details/post-details.component.html
@@ -14,6 +14,11 @@
             {{ post.title }}
           </p>
         </mat-card-content>
+        <mat-card-actions>
+          <mat-action-row>
+            <a mat-button color="primary">Add to Cart</a>
+          </mat-action-row>
+        </mat-card-actions>
       </mat-card>
     </div>
   </div>
