--- a/Iwacu/src/app/header/header.component.html
+++ b/Iwacu/src/app/header/header.component.html
@@ -13,6 +13,7 @@
     <li *ngIf="!userIsAuthenticated">
       <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
+
     <button mat-button *ngIf="userIsAuthenticated" (click)="onLogout()">Log Out</button>
 
     <li *ngIf="userIsAuthenticated">
@@ -21,6 +22,9 @@
         <button mat-menu-item routerLink="/profile" routerLinkActive="mat-accent">My Account</button>
         <button mat-menu-item>My Past Orders</button>
       </mat-menu>
+    </li>
+    <li>
+      <button mat-button *ngIf="userIsAuthenticated" routerLink="/my-cart"> My Cart</button>
     </li>
   </ul>
 </mat-toolbar>
