--- a/Iwacu/src/app/posts/post-list/post-list.component.html
+++ b/Iwacu/src/app/posts/post-list/post-list.component.html
@@ -21,7 +21,7 @@
             <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
           </mat-action-row>
           <mat-action-row *ngIf="userIsAuthenticated && !isSeller">
-            <a mat-button color="primary">Add to Cart</a>
+            <a mat-button color="primary" (click)="onAddToCart(post.id)">Add to Cart</a>
             <button mat-button color="accent" [routerLink]="['/post-detail', post.id]">See Details</button>
           </mat-action-row>
         </mat-card-actions>
