progress on cart backend

--- a/Iwacu/src/app/front-end-ui/header/header.component.html
+++ b/Iwacu/src/app/front-end-ui/header/header.component.html
@@ -24,7 +24,7 @@
       </mat-menu>
     </li>
     <li>
-      <button mat-button *ngIf="userIsAuthenticated" routerLink="/cart"> My Cart</button>
+      <button mat-button *ngIf="userIsAuthenticated" routerLink="cart"> My Cart</button>
     </li>
   </ul>
 </mat-toolbar>
